--- a/app.json
+++ b/app.json
@@ -2,20 +2,20 @@
   "name": "whatsapp-Automation",
   "description": " Whatsapp Ai.",
   "keywords": [
-    "whatsapp Ai"
+    "Ai", "Mateo", "bot", "gerald", "chatbot"
   ],
-  "repository": "https://github.com/Guru322/GURU-BOT",
+  "repository": "https://github.com/13065994/WhatsApp-BOT",
   "stack": "container",
   "env": {
     "OWNERS": {
       "description": "owner numbers",
       "required": true,
-      "value": "917605902011;GURU;6281255369012;Ash"
+      "value": "08121662697;gerald"
     },
     "BOTNAME": {
       "description": "Give your BOT a name",
       "required": true,
-      "value": "ᴛʜᴇ ɢᴜʀᴜ-ʙᴏᴛ"
+      "value": "[ - ]•➤𝙶𝚎𝚛𝚊𝚕𝚍 𝚋𝚘𝚝"
     },
     "DATABASE_URL": {
       "description": "your mongodb database url",
@@ -35,7 +35,7 @@
     "PREFIX": {
       "description": "put any one symbol here except @ and + , leave it Blank if you want to use multiple prefix",
       "required": false,
-      "value": ""
+      "value": "-"
     },
      "HKEY": {
       "description": "Put your Heroku api key Here , Get one from here https://dashboard.heroku.com/account",
@@ -59,8 +59,8 @@
     },
     "antidelete": {
       "description": "bot will forward deleted messages if you make it true",
-      "required": false,
-      "value": "false"
+      "required": true,
+      "value": "true"
     },
      "REMOVEBG_KEY": {
       "description": "your RemoveBg api key",
