--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
     "SESSION_ID": {
       "description": "your session id",
       "required": true,
-      "value": "5KQ6DG4E"
+      "value": "GuruBot~tgrXdsvR"
     },
     "MODE": {
       "description": "mode public or private",
